--- a/index.html
+++ b/index.html
@@ -2,14 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>my personal portfolio!</title>
+  <title>My Personal Portfolio</title>
   <style>
     body {
-      background-color: #9bc4e2
-      font-family: 'Poppins', sans-serif;
-      color: #4a4a4a;
+      background-color: #9bc4e2;
+      font-family: 'Poppins', sans-serif; /* cute font */
+      color: #4a4a4a; /* text color */
       text-align: center;
-      padding: 50px;
+      padding: 0;
     }
+
+    h1 {
+      color: #2e4b6d; /* dark blue for the main title */
+    }
+
+    section {
+      background-color: #ffebf1; /* pastel pink background for each section */
+      margin: 20px 0;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 10px rgba(255, 105, 180, 0.4);
+    }
+
+    h2 {
+      color: #2e4b6d
+    }
+
+    p {
+      font-size: 18px;
+    }
+
+    .skills-list {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .skill {
+      background-color: #ffebf1;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 5px rgba(255, 182, 193, 0.6);
+    }
+
+    .project-card {
+      background-color: #ffebf1;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 5px rgba(255, 182, 193, 0.4);
+      margin-top: 10px;
+    }
+  </style>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
+<body>
+  <h1>Welcome to My Personal Portfolio!</h1>
+
+  <!-- About Me Section -->
+  <section id="about-me">
+    <h2>About Me</h2>
+    <p>Hello! I'm Chris, an student with a passion for coding, design, and creating things that solve real-world problems. I love all things tech, and I'm currently learning how to code in python.</p>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-list">
+      <div class="skill">Python</div>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <h3>Simple-Calculator</h3>
+      <p>This project is a calculator that supports the basics. Made with python.</p>
+    </div>
+    <div class="project-card">
+      <h3>Number-Guesser-Game</h3>
+      <p>A game where you have to guess a random number. Made with python.</p>
+    </div>
+  </section>
 </body>
 </html>
