--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     section {
-      background-color: #ffebf1; /* pastel pink background for each section */
+      background-color: #ffffff; /* white background for each section */
       margin: 20px 0;
       padding: 20px;
       border-radius: 10px;
@@ -40,14 +40,14 @@
     }
 
     .skill {
-      background-color: #ffebf1;
+      background-color: #ffffff;
       padding: 10px;
       border-radius: 10px;
       box-shadow: 2px 2px 5px rgba(255, 182, 193, 0.6);
     }
 
     .project-card {
-      background-color: #ffebf1;
+      background-color: #ffffff;
       padding: 15px;
       border-radius: 10px;
       box-shadow: 2px 2px 5px rgba(255, 182, 193, 0.4);
@@ -78,10 +78,12 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project-card">
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">simple-calculator.py</a>
       <h3>Simple-Calculator</h3>
       <p>This project is a calculator that supports the basics. Made with python.</p>
     </div>
     <div class="project-card">
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/number-guesser.py" target="_blank">number-guesser.py</a>
       <h3>Number-Guesser-Game</h3>
       <p>A game where you have to guess a random number. Made with python.</p>
     </div>
