--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!-- About Me Section -->
   <section id="about-me">
     <h2>About Me</h2>
-    <p>Hello! I'm Chris, an student with a passion for coding, design, and creating things that solve real-world problems. I love all things tech, and I'm currently learning how to code in python.</p>
+    <p>Hello! I'm Chris, a student with a passion for coding, design, and creating things that solve real-world problems. I love all things tech, and I'm currently learning how to code in python.</p>
   </section>
 
   <!-- Skills Section -->
