--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       background-color: #9bc4e2;
-      font-family: 'Poppins', sans-serif; /* cute font */
+      font-family: 'Poppins', sans-serif; /* font */
       color: #4a4a4a; /* text color */
       text-align: center;
       padding: 0;
@@ -63,7 +63,7 @@
   <!-- About Me Section -->
   <section id="about-me">
     <h2>About Me</h2>
-    <p>Hello! I'm Chris, a student with a passion for coding, design, and creating things that solve real-world problems. I love all things tech, and I'm currently learning how to code in python.</p>
+    <p>Hello! I'm Chris, a student with a passion for coding and design. I love all things tech, and I'm currently learning how to code in python.</p>
   </section>
 
   <!-- Skills Section -->
@@ -71,6 +71,8 @@
     <h2>Skills</h2>
     <div class="skills-list">
       <div class="skill">Python</div>
+      <div class="skill">BBP</div>
+      <div class="skill">Swift</div>
     </div>
   </section>
 
@@ -78,7 +80,7 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">simple-calculator.py</a>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">simple-calculator.py</a>  
       <h3>Simple-Calculator</h3>
       <p>This project is a calculator that supports the basics. Made with python.</p>
     </div>
@@ -88,5 +90,48 @@
       <p>A game where you have to guess a random number. Made with python.</p>
     </div>
   </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>If you'd like to get in touch, feel free to connect with me through the links below!</p>
+  
+    <!-- Contact Info (Links) -->
+    <div class="contact-info">
+      <a href="https://github.com/sterlaen" target="_blank">GitHub</a> |
+      <a href="https://scratch.mit.edu/users/sterlaen/" target="_blank">Scratch</a> |
+      <a href="mailto:kaplonn7@gmail.com" target="_blank">Email</a>
+    </div>
+  </section>
+  
+  <style>
+    #contact {
+      background-color: #ffffff;
+      margin: 20px 0;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 10px rgba(255, 105, 180, 0.4);
+      text-align: center;
+    }
+  
+    #contact h2 {
+      color: #2e4b6d;
+    }
+  
+    #contact p {
+      font-size: 18px;
+      color: #4a4a4a;
+    }
+  
+    .contact-info a {
+      color: #2e4b6d;
+      text-decoration: none;
+      font-size: 18px;
+      margin: 0 10px;
+    }
+  
+    .contact-info a:hover {
+      color: #253d57; 
+    }
+  </style>  
 </body>
 </html>
