--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -73,6 +73,7 @@
       <div class="skill">Python</div>
       <div class="skill">BBP</div>
       <div class="skill">Swift</div>
+      <div class="skill">HTML</div>
     </div>
   </section>
 
