--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -100,7 +100,8 @@
     <div class="contact-info">
       <a href="https://github.com/sterlaen" target="_blank">GitHub</a> |
       <a href="https://scratch.mit.edu/users/sterlaen/" target="_blank">Scratch</a> |
-      <a href="mailto:kaplonn7@gmail.com" target="_blank">Email</a>
+      <a href="mailto:kaplonn7@gmail.com" target="_blank">Email</a> |
+      <a href="https://github.com/sterlaen" target="_blank">GitHub</a>
     </div>
   </section>
   
