--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -20,8 +20,8 @@
       background-color: #ffffff; /* white background for each section */
       margin: 20px 0;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 2px 2px 10px rgba(255, 105, 180, 0.4);
+      border-radius: 20px;
+      box-shadow: 2px 2px 10px #253d57; /* shadow */
     }
 
     h2 {
@@ -42,15 +42,15 @@
     .skill {
       background-color: #ffffff;
       padding: 10px;
-      border-radius: 10px;
-      box-shadow: 2px 2px 5px rgba(255, 182, 193, 0.6);
+      border-radius: 20px;
+      box-shadow: 2px 2px 5px #253d57;
     }
 
     .project-card {
       background-color: #ffffff;
       padding: 15px;
-      border-radius: 10px;
-      box-shadow: 2px 2px 5px rgba(255, 182, 193, 0.4);
+      border-radius: 20px;
+      box-shadow: 2px 2px 5px #253d57;
       margin-top: 10px;
     }
   </style>
@@ -81,16 +81,41 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">simple-calculator.py</a>  
-      <h3>Simple-Calculator</h3>
-      <p>This project is a calculator that supports the basics. Made with python.</p>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">Simple Calculator</a>  
+      <p>A calculator that supports the basics. Made with python.</p>
     </div>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/number-guesser.py" target="_blank">number-guesser.py</a>
-      <h3>Number-Guesser-Game</h3>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/number-guesser.py" target="_blank">Number Guesser</a>
       <p>A game where you have to guess a random number. Made with python.</p>
     </div>
   </section>
+
+  <style>
+    #projects {
+      background-color: #ffffff;
+      margin: 20px 0;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 2px 2px 10px #253d57;
+      text-align: center;
+    }
+  
+    #projects h2 {
+      color: #2e4b6d;
+    }
+  
+    #projects p {
+      font-size: 18px;
+      color: #4a4a4a;
+    }
+  
+    .project-card a {
+      color: #2e4b6d;
+      text-decoration: none;
+      font-size: 18px;
+      margin: 0 10px;
+    }
+  </style>  
 
   <section id="contact">
     <h2>Contact Me</h2>
@@ -100,8 +125,7 @@
     <div class="contact-info">
       <a href="https://github.com/sterlaen" target="_blank">GitHub</a> |
       <a href="https://scratch.mit.edu/users/sterlaen/" target="_blank">Scratch</a> |
-      <a href="mailto:kaplonn7@gmail.com" target="_blank">Email</a> |
-      <a href="https://github.com/sterlaen" target="_blank">GitHub</a>
+      <a href="mailto:kaplonn7@gmail.com" target="_blank">Email</a>
     </div>
   </section>
   
@@ -110,8 +134,8 @@
       background-color: #ffffff;
       margin: 20px 0;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 2px 2px 10px rgba(255, 105, 180, 0.4);
+      border-radius: 20px;
+      box-shadow: 2px 2px 10px #253d57;
       text-align: center;
     }
   
