--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -63,7 +63,7 @@
   <!-- About Me Section -->
   <section id="about-me">
     <h2>About Me</h2>
-    <p>Hello! I'm Chris, a student with a passion for coding and design. I love all things tech, and I'm currently learning how to code in python.</p>
+    <p>Hello! I'm Chris, a student with a passion for coding and design. I love all things tech, and I'm currently learning how to code in python and swift.</p>
   </section>
 
   <!-- Skills Section -->
@@ -87,6 +87,10 @@
     <div class="project-card">
       <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/number-guesser.py" target="_blank">Number Guesser</a>
       <p>A game where you have to guess a random number. Made with python.</p>
+    </div>
+    <div class="project-card">
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/minecraft-wiki.swift" target="_blank">Minecraft Wikipedia</a>
+      <p>A mini wikipedia about Minecraft. Made with swift.</p>
     </div>
   </section>
 
