--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -77,6 +77,38 @@
     </div>
   </section>
 
+  <!-- Accomplishments Section -->
+  <section id="accomplishments">
+    <h2>Accomplishments</h2>
+    <div class="project-card">
+      <p>Obtained 2nd place in the NPGC3 2024 organised by Wellington Primary School.</p>
+    </div>
+    <div class="project-card">
+      <p>Obtained 1st place in 2023 for Foundation Chinese.</p>
+    </div>
+    <div class="project-card">
+      <p>Volunteered as a peer editor for creative writing projects.</p>
+    </div>
+  </section>
+
+    <!-- Work Section -->
+  <section id="volunteer work">
+    <h2>Volunteer work</h2>
+    <div class="project-card">
+      <p>LordOfLemmings: A Clockwork Heart, The Woodwife's Daughter.  `</p>
+      <a href="https://archiveofourown.org/works/51368812" target="_blank">A Clockwork Heart</a>  
+    </div>
+    <div class="project-card">
+      <p>OneMillionless: A Tale Of Vanda.</p>
+    </div>
+    <div class="project-card">
+      <p>GollumIsMySpiritAnimal: You're Too Sweet, I Need to Drink You with Liquor.</p>
+    </div>
+    <div class="project-card">
+      <p>ConfringoHome: Consequential, or The Modern Sisyphus.</p>
+    </div>
+  </section>
+
   <!-- Projects Section -->
   <section id="projects">
     <h2>Projects</h2>
@@ -90,7 +122,7 @@
     </div>
     <div class="project-card">
       <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/minecraft-wiki.swift" target="_blank">Minecraft Wikipedia</a>
-      <p>A mini wikipedia about Minecraft. Made with swift.</p>
+      <p>A tiny overview about the game 'Minecraft'. Made with swift.</p>
     </div>
   </section>
 
