--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -63,7 +63,7 @@
   <!-- About Me Section -->
   <section id="about-me">
     <h2>About Me</h2>
-    <p>Hello! I'm Chris, a student with a passion for coding and design. I love all things tech, and I'm currently learning how to code in python and swift.</p>
+    <p>Hello! I'm Chris, a student with a passion for coding, design, and the English language. I'm currently learning how to code in Python and Swift.</p>
   </section>
 
   <!-- Skills Section -->
@@ -73,7 +73,6 @@
       <div class="skill">Python</div>
       <div class="skill">BBP</div>
       <div class="skill">Swift</div>
-      <div class="skill">HTML</div>
     </div>
   </section>
 
@@ -84,9 +83,6 @@
       <p>Obtained 2nd place in the NPGC3 2024 organised by Wellington Primary School.</p>
     </div>
     <div class="project-card">
-      <p>Obtained 1st place in 2023 for Foundation Chinese.</p>
-    </div>
-    <div class="project-card">
       <p>Volunteered as a peer editor for creative writing projects.</p>
     </div>
   </section>
@@ -95,17 +91,22 @@
   <section id="volunteer work">
     <h2>Volunteer work</h2>
     <div class="project-card">
-      <p>LordOfLemmings: A Clockwork Heart, The Woodwife's Daughter.  `</p>
+      <p>LordOfLemmings</p>
       <a href="https://archiveofourown.org/works/51368812" target="_blank">A Clockwork Heart</a>  
+      <a href="https://archiveofourown.org/works/51368812" target="_blank">coming soon !!</a>  
     </div>
     <div class="project-card">
-      <p>OneMillionless: A Tale Of Vanda.</p>
+      <p>OneMillionlees</p>
+      <a href="https://archiveofourown.org/works/64263793" target="_blank">A Tale Of Vanda</a>
     </div>
     <div class="project-card">
-      <p>GollumIsMySpiritAnimal: You're Too Sweet, I Need to Drink You with Liquor.</p>
+      <p>GollumIsMySpiritAnimal</p>
+      <a href="https://archiveofourown.org/works/61455388" target="_blank">You’re Too Sweet, I Need to Drink You with Liquor</a>
     </div>
     <div class="project-card">
-      <p>ConfringoHome: Consequential, or The Modern Sisyphus.</p>
+      <p>ConfringoHome</p>
+      <p>Consequential, or The Modern Sisyphus</p>
+      <p>Author does not consent to link</p>
     </div>
   </section>
 
@@ -114,15 +115,19 @@
     <h2>Projects</h2>
     <div class="project-card">
       <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">Simple Calculator</a>  
-      <p>A calculator that supports the basics. Made with python.</p>
+      <p>A calculator that supports the basics. Made with Python.</p>
     </div>
     <div class="project-card">
       <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/number-guesser.py" target="_blank">Number Guesser</a>
-      <p>A game where you have to guess a random number. Made with python.</p>
+      <p>A game where you have to guess a random number. Made with Python.</p>
     </div>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/minecraft-wiki.swift" target="_blank">Minecraft Wikipedia</a>
-      <p>A tiny overview about the game 'Minecraft'. Made with swift.</p>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/minecraft-wiki.swift" target="_blank">Minecraft Overview</a>
+      <p>A tiny overview about the game 'Minecraft'. Made with Swift.</p>
+    </div>
+    <div class="project-card">
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/shrek.swift" target="_blank">Shrek</a>
+      <p>A simple recreation of the character 'Shrek'. Made with Swift.</p>
     </div>
   </section>
 
@@ -155,7 +160,7 @@
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>If you'd like to get in touch, feel free to connect with me through the links below!</p>
+    <p>If you'd like to get in touch, feel free to contact me through the links below!</p>
   
     <!-- Contact Info (Links) -->
     <div class="contact-info">
