--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -54,19 +54,19 @@
       margin-top: 10px;
     }
   </style>
-  <!-- Google Fonts -->
+  <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Welcome to My Personal Portfolio!</h1>
 
-  <!-- About Me Section -->
+  <!-- about me -->
   <section id="about-me">
     <h2>About Me</h2>
-    <p>Hello! I'm Chris, a student with a passion for coding, design, and the English language. I'm currently learning how to code in Python and Swift.</p>
+    <p>Hello! I'm Chris, a student with a passion for coding, engineering, and the English language. I'm currently learning how to code in Python and Swift.</p>
   </section>
 
-  <!-- Skills Section -->
+  <!-- skills -->
   <section id="skills">
     <h2>Skills</h2>
     <div class="skills-list">
@@ -76,7 +76,7 @@
     </div>
   </section>
 
-  <!-- Accomplishments Section -->
+  <!-- accomplishments -->
   <section id="accomplishments">
     <h2>Accomplishments</h2>
     <div class="project-card">
@@ -87,7 +87,7 @@
     </div>
   </section>
 
-    <!-- Work Section -->
+    <!-- work -->
   <section id="volunteer work">
     <h2>Volunteer work</h2>
     <div class="project-card">
@@ -106,11 +106,11 @@
     <div class="project-card">
       <p>ConfringoHome</p>
       <p>Consequential, or The Modern Sisyphus</p>
-      <p>Author does not consent to link</p>
+      <p>Author does not consent to link.</p>
     </div>
   </section>
 
-  <!-- Projects Section -->
+  <!-- projects -->
   <section id="projects">
     <h2>Projects</h2>
     <div class="project-card">
@@ -162,7 +162,7 @@
     <h2>Contact Me</h2>
     <p>If you'd like to get in touch, feel free to contact me through the links below!</p>
   
-    <!-- Contact Info (Links) -->
+    <!-- contact info -->
     <div class="contact-info">
       <a href="https://github.com/sterlaen" target="_blank">GitHub</a> |
       <a href="https://scratch.mit.edu/users/sterlaen/" target="_blank">Scratch</a> |
