--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Cool Site</title>
+    <title>chris' website</title>
   </head>
   <body>
     <h1>Hello world!</h1>
-    <p>Welcome to my website 🎉</p>
+    <p>Welcome to my personal portfolio :)</p>
   </body>
 </html>
