Correct capitalization in headings and improve consistency in personal-portfolio.html

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -58,7 +58,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome to My Personal Portfolio!</h1>
+  <h1>Welcome to my Personal Portfolio!</h1>
 
   <!-- about me -->
   <section id="about-me">
@@ -89,7 +89,7 @@
 
     <!-- work -->
   <section id="volunteer work">
-    <h2>Volunteer work</h2>
+    <h2>Volunteer Work</h2>
     <div class="project-card">
       <p>LordOfLemmings</p>
       <a href="https://archiveofourown.org/works/51368812" target="_blank">A Clockwork Heart</a>  
