Update personal description in personal-portfolio.html for clarity and relevance

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -63,7 +63,7 @@
   <!-- about me -->
   <section id="about-me">
     <h2>About Me</h2>
-    <p>Hello! I'm Chris, a student with a passion for coding, engineering, and the English language. I'm currently learning how to code in Python and Swift.</p>
+    <p>Hello! I'm Chris, a student with a passion for STEM and the English language. I'm currently learning how to code in Python and Swift.</p>
   </section>
 
   <!-- skills -->
