--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -71,8 +71,10 @@
     <h2>Skills</h2>
     <div class="skills-list">
       <div class="skill">Python</div>
-      <div class="skill">BBP</div>
       <div class="skill">Swift</div>
+      <div class="skill">BBP</div>
+      <div class="skill">HTML</div>
+      <div class="skill">CSS</div>
     </div>
   </section>
 
@@ -128,6 +130,10 @@
     <div class="project-card">
       <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/shrek.swift" target="_blank">Shrek</a>
       <p>A simple recreation of the character 'Shrek'. Made with Swift.</p>
+    </div>
+    <div class="project-card">
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/personal-portfolio.html" target="_blank">Portfolio</a>
+      <p>A personal portfolio for me. It's also this website! Made with HTML and CSS.</p>
     </div>
   </section>
 
