normalize capitalization and improve consistency in index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Personal Portfolio</title>
+  <title>my personal portfolio</title>
   <style>
     body {
       background-color: #9bc4e2;
@@ -58,21 +59,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome to my Personal Portfolio!</h1>
+  <h1>welcome to chris's personal portfolio!</h1>
 
   <!-- about me -->
   <section id="about-me">
-    <h2>About Me</h2>
-    <p>Hello! I'm Chris, a student with a passion for STEM and the English language. I'm currently learning how to code in Python and Swift.</p>
+    <h2>about me</h2>
+    <p>hello! i'm chris, a student with a passion for STEM and the english language. i'm currently learning how to code in python.</p>
   </section>
 
   <!-- skills -->
   <section id="skills">
-    <h2>Skills</h2>
+    <h2>skills</h2>
     <div class="skills-list">
-      <div class="skill">Python</div>
-      <div class="skill">BBP</div>
-      <div class="skill">Swift</div>
+      <div class="skill">python</div>
+      <div class="skill">swift</div>
+      <div class="skill">bbp</div>
+      <div class="skill">HTML</div>
+      <div class="skill">CSS</div>
     </div>
   </section>
 
@@ -80,20 +83,20 @@
   <section id="accomplishments">
     <h2>Accomplishments</h2>
     <div class="project-card">
-      <p>Obtained 2nd place in the NPGC3 2024 organised by Wellington Primary School.</p>
+      <p>obtained 2nd place in the NPGC3 2024 organised by wellington primary school.</p>
     </div>
     <div class="project-card">
-      <p>Volunteered as a peer editor for creative writing projects.</p>
+      <p>volunteered as a peer editor for creative writing projects.</p>
     </div>
   </section>
 
     <!-- work -->
   <section id="volunteer work">
-    <h2>Volunteer Work</h2>
+    <h2>volunteer work</h2>
     <div class="project-card">
       <p>LordOfLemmings</p>
       <a href="https://archiveofourown.org/works/51368812" target="_blank">A Clockwork Heart</a>  
-      <a href="https://archiveofourown.org/works/51368812" target="_blank">coming soon !!</a>  
+      <a href="https://archiveofourown.org/works/51368812" target="_blank">idk bru</a>  
     </div>
     <div class="project-card">
       <p>OneMillionlees</p>
@@ -106,7 +109,7 @@
     <div class="project-card">
       <p>ConfringoHome</p>
       <p>Consequential, or The Modern Sisyphus</p>
-      <p>Author does not consent to link.</p>
+      <p>author does not consent to link.</p>
     </div>
   </section>
 
@@ -114,20 +117,28 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">Simple Calculator</a>  
-      <p>A calculator that supports the basics. Made with Python.</p>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/simple-calculator.py" target="_blank">simple calculator</a>  
+      <p>a calculator that supports the basics. made with python.</p>
     </div>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/number-guesser.py" target="_blank">Number Guesser</a>
-      <p>A game where you have to guess a random number. Made with Python.</p>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/number-guesser.py" target="_blank">number guesser</a>
+      <p>a game where you have to guess a random number. made with python.</p>
     </div>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/minecraft-wiki.swift" target="_blank">Minecraft Overview</a>
-      <p>A tiny overview about the game 'Minecraft'. Made with Swift.</p>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/minecraft-wiki.swift" target="_blank">minecraft overview</a>
+      <p>a tiny overview about the game 'minecraft'. made with swift.</p>
     </div>
     <div class="project-card">
-      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/shrek.swift" target="_blank">Shrek</a>
-      <p>A simple recreation of the character 'Shrek'. Made with Swift.</p>
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/shrek.swift" target="_blank">shrek</a>
+      <p>a simple recreation of the character 'shrek'. made with swift.</p>
+    </div>
+    <div class="project-card">
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/personal-portfolio.html" target="_blank">portfolio</a>
+      <p>s personal portfolio by me, for me. it's also this website! made with HTML and CSS.</p>
+    </div>
+    <div class="project-card">
+      <a href="https://github.com/sterlaen/sterlaen.github.io/blob/main/personal-portfolio.html" target="_blank">Portfolio</a>
+      <p>A personal portfolio for me. It's also this website! Made with HTML and CSS.</p>
     </div>
   </section>
 
@@ -159,14 +170,14 @@
   </style>  
 
   <section id="contact">
-    <h2>Contact Me</h2>
-    <p>If you'd like to get in touch, feel free to contact me through the links below!</p>
+    <h2>contact me</h2>
+    <p>if you'd like to get in touch, feel free to contact me through the links below!</p>
   
     <!-- contact info -->
     <div class="contact-info">
-      <a href="https://github.com/sterlaen" target="_blank">GitHub</a> |
-      <a href="https://scratch.mit.edu/users/sterlaen/" target="_blank">Scratch</a> |
-      <a href="mailto:kaplonn7@gmail.com" target="_blank">Email</a>
+      <a href="https://github.com/sterlaen" target="_blank">gitHub</a> |
+      <a href="https://scratch.mit.edu/users/sterlaen/" target="_blank">scratch</a> |
+      <a href="mailto:kaplonn7@gmail.com" target="_blank">email</a>
     </div>
   </section>
   
