--- a/bbcs/training.html
+++ b/bbcs/training.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html>
-     <head> <!-- the name of the webpage -->
-        <title>BBCS training website</title>
-        <link rel=""stylesheet" href ="style.css" <!-- css file -->
-     </head>
-     <br> <!-- line break -->
-     <body> <!-- the stuff in the page -->
-        <h1>using html n css</h1> <!-- this is a heading, h1-h6 -->
-        <div> <!-- splits things into sections -->
-        <img src="image.png" height="750px" width="500px" alt="this is an image" /> <!-- image tag --> 
-        <h1><a href="https://buildingblocs.sg/events/december/">bbcs website</a></h1> <!-- link -->
-        </div>
-     </body>
+   <head>
+      <!-- the name of the webpage -->
+      <title>BBCS training website</title>
+      <link rel="stylesheet" href="style.css" /> <!-- css file -->
+   </head>
+         <h1>
+            <span class="tilting-text">bbcs</span>
+        </h1>
+         <img src="image.png" height="750px" width="500px" alt="this is an image" /> <!-- image tag -->
+         <img src="image.png" class="image-style" alt="this is an image" /> <!-- image tag -->
+            <a href="https://buildingblocs.sg/events/december/" target="_blank">bbcs website</a>
+         </h1> <!-- link -->
+      <style>
+         .tilting-text {
+            position: relative;
+            animation-name: tilt;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+         }
+         @keyframes tilt {
+            0% {
+               transform: rotateZ(0deg);
+            }
+            25% {
+               transform: rotateZ(10deg);
+            }
+            50% {
+               transform: rotateZ(20deg);
+            }
+            75% {
+               transform: rotateZ(-20deg);
+            }
+            100% {
+               transform: rotateZ(0deg);
+            }
+         }
+      </style>
+      <body>
 </html>
